<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:orientation="vertical"
    tools:context=".Note">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="80px"
        android:text="@string/note"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50px">

        <Button
            android:id="@+id/note_save_button"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_weight="1"
            android:backgroundTint="#1E2D7E"
            android:onClick="onSave_click"
            android:text="@string/save_note" />

        <Button
            android:id="@+id/note_close_button"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_weight="1"
            android:backgroundTint="#1E2D7E"
            android:onClick="onClose_click"
            android:text="@string/close" />

        <Button
            android:id="@+id/note_delete_button"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="50px"
            android:layout_weight="1"
            android:backgroundTint="#6E0404"
            android:onClick="onDelete_click"
            android:text="@string/delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_weight="1"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/empty"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <EditText
        android:id="@+id/note_context2"
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />
</LinearLayout>