<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:orientation="vertical"
    tools:context=".Reg">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:paddingTop="80px"
        android:text="@string/reg"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_weight="1"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/reg_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/empty"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_weight="1"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="50px">

        <Button
            android:id="@+id/reg_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200px"
            android:layout_marginRight="20px"
            android:layout_weight="1"
            android:backgroundTint="#1E2D7E"
            android:onClick="on_OkClick"
            android:text="@string/ok" />

        <Button
            android:id="@+id/reg_exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="200px"
            android:layout_weight="1"
            android:backgroundTint="#1E2D7E"
            android:onClick="onCancelClick"
            android:text="@string/ext" />
    </LinearLayout>
</LinearLayout>